--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 API_ID=5860777
-API_HASH="a8595cffe5fca4cf19ea3f3334b4fe46"
-BOT_TOKEN=6185997244:AAFTuczaThf4hiwnjCvilE2BORvVSYgtojo
+API_HASH='a8595cffe5fca4cf19ea3f3334b4fe46'
+BOT_TOKEN='5499781157:AAG75HAazC2254qlnPpszdQviCwcnz7a4OQ'
 DATABASE_URL=
-MUST_JOIN=resvvfor
+MUST_JOIN='resvvfor'
